--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Sidepanel</title>
+    <title>Sidepanel</title>
   </head>
   
   <body>
-    <h1>All sites sidepanel extension</h1>
-    <p>This side panel is enabled on all sites</p>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
